2002-10-01  JP Rosevear  <jpr@ximian.com>

	* configure.in: update version (0.7.8.99)

	* src/libsoup/soup-private.h: update version

2002-09-05  Dan Winship  <danw@ximian.com>

	* configure.in, src/libsoup/soup-private.h: Version 0.7.8

2002-08-29  Joe Shaw  <joe@ximian.com>

	* src/libsoup/soup-message.c (global_handlers): Get rid of the
	"Authentication-Info" header handler.
	(authorize_handler): Set up a handler on the auth's controlling
	message to validate the auth.
	(maybe_validate_auth): Make sure our error code isn't an auth
	failure or a server error and set the auth to the successful state.

2002-08-27  Dan Winship  <danw@ximian.com>

	* src/libsoup/soup-ntlm.c (setup_schedule): Make this not read
	uninitialized memory.

2002-08-27  Joe Shaw  <joe@ximian.com>

	* configure.in, src/libsoup/soup-private.h: Version 0.7.7

	* src/libsoup/soup-message.c (global_handlers): Replace the 2xx
	response class handler with an "Authentication-Info" header
	handler, so we can correctly set SoupAuths as successful, even if
	we got redirects or errors.

2002-08-20  Dan Winship  <danw@ximian.com>

	* src/libsoup/soup-ntlm.c: (soup_ntlm_parse_challenge): Use
	g_memdup, not g_strndup, to copy the nonce. Duh! Fixes #26061
	(sporadic NTLM auth failures).
	(NTLMResponse): Fix this structure up a bit, although Windows
	doesn't actually seem to care that we've been mangling it all
	along.
	(soup_ntlm_response): Translate the flags to little-endian (though
	again, it happened to not matter).
	(various) Use GUINT16_TO/FROM_LE rather than #defining our own
	versions.
	(Spbox): Add some braces to make gcc happier.

2002-08-07  Joe Shaw  <joe@ximian.com>

	* src/libsoup/soup-auth.c (digest_auth_func): Fix a memory leak.
	(soup_auth_new_digest): Fix a memory leak.

2002-08-07  Joe Shaw  <joe@ximian.com>

	* configure.in, src/libsoup/soup-private.h: Version 0.7.6.

2002-08-06  Dan Winship  <danw@ximian.com>

	* src/libsoup/soup-socket-unix.c: Remove an unneeded #include that